--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<html lang="en"  >
+<html lang="en" ng-app="app" >
 <head>
 	<title>Soluinted</title>
 	<meta charset="utf-8">
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="controllers/app.js"></script>
     <script type="text/javascript" src="controllers/homeController.js"  ></script>
+    <script type="text/javascript" src="controllers/detailController.js"  ></script>
     <script type="text/javascript" src="controllers/app2.js"></script>
     <script type="text/javascript" src="js/angular-route.js"></script>
     <script type="text/javascript" src="js/ui-bootstrap-tpls-0.11.0.js"></script>
