--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,18 @@
     <link rel="stylesheet" href="css/loading-bar.css">
     <link rel="stylesheet" href="css/angular-bootstrap-lightbox.css">
     <!--Angular?-->
+    <script type="text/javascript" src="js/angular-file-upload-shim.js"></script>    
     <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-file-upload.min.js"></script>
     <script type="text/javascript" src="controllers/app.js"></script>
     <script type="text/javascript" src="controllers/homeController.js"  ></script>
     <script type="text/javascript" src="controllers/contactenosController.js"  ></script>
     <script type="text/javascript" src="controllers/detailController.js"  ></script>
+    <script type="text/javascript" src="controllers/quienesomosController.js"  ></script>
+    <script type="text/javascript" src="controllers/administradorController.js"  ></script>
+    <script type="text/javascript" src="controllers/administradorProductosController.js"  ></script>
+    
+    
     <script type="text/javascript" src="controllers/app2.js"></script>
     <script type="text/javascript" src="js/angular-route.js"></script>
     <script type="text/javascript" src="js/ui-bootstrap-tpls-0.11.0.js"></script>
