--- a/app/categorias.html
+++ b/app/categorias.html
@@ -1,34 +1,36 @@
-<div id="contenido" ng-controller="administradorProductos">
+<div ng-controller="categoriasController">
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="page-header">Productos</h1>
+			<h1 class="page-header">Categorias de producto</h1>
 		</div>	        		
 	</div>
-	<div class="row" style="margin-bottom:15px">
-		<div class="col-md-2">
-			<button class="btn btn-primary" ng-click="anadir()">Añadir producto</button>
+	<div class="row">
+		<div class="col-md-2" style="margin-bottom:15px">
+			<button class="btn btn-primary" ng-click="anadir()" >Añadir categoria</button>
 		</div>
 	</div>
-
-	<div class="table-responsive" ng-init="cargaInicial()" >	    		
+	
+	<div class="table-responsive" ng-init="cargaInicial()">
 		<table class="table table-striped table-bordered table-hover" id="dataTables-example">
 			<thead>
 				<tr>
 					<th width="200px">Fecha de inserción</th>
-					<th>Nombre del producto</th>
+					<th>Nombre categoria</th>
 					<th width="100px">Editar</th>
 					<th width="100px">Eliminar</th>
 				</tr>
 			</thead>
 			<tbody ng-show="datosTabla.length > 0">
-				<tr ng-repeat="datos in datosTabla track by $index">
+				<tr ng-repeat="datos in datosTabla">
 					<td>{{datos.Fecha}}</td>
 					<td>{{datos.Nombre}}</td>
-					<td><button class="form-control btn btn-success" ng-click="modificar($index)">Editar</button></td>
+					<td><button class="form-control btn btn-success" ng-click="editar($index)">Editar</button></td>
 					<td><button class="form-control btn btn-danger" ng-click="eliminar($index)">Eliminar</button></td>
 				</tr>
 			</tbody>	        			
 		</table>	        		
 	</div>
 	<pagination total-items="totalItems" ng-model="paginaActual" max-size="maximoCategorias" ng-change="pageChanged()" class="pagination-sm" boundary-links="true" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
-</div>	
+</div>
+
+    <script type="text/javascript" src="../../controllers/administradorController.js"></script>
